<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_nba"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_nba_props"
            android:icon="@drawable/ic_nav_props"
            android:title="@string/nav_nba_props"
            android:checked="true" />

        <item
            android:id="@+id/nav_first_basket"
            android:icon="@drawable/ic_nav_basket"
            android:title="@string/nav_first_basket" />

        <item
            android:id="@+id/nav_bet_sim"
            android:icon="@drawable/ic_nav_sim"
            android:title="@string/nav_bet_sim" />

        <item
            android:id="@+id/nav_prizepicks"
            android:icon="@drawable/ic_nav_prize"
            android:title="@string/nav_prizepicks" />

        <item
            android:id="@+id/nav_daily_blog"
            android:icon="@drawable/ic_nav_blog"
            android:title="@string/nav_daily_blog" />

    </group>

    <item android:title="@string/nav_mlb_section">
        <menu>
            <item
                android:id="@+id/nav_mlb"
                android:icon="@drawable/ic_nav_mlb"
                android:title="@string/nav_mlb" />
        </menu>
    </item>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_disclaimer"
                android:icon="@drawable/ic_nav_info"
                android:title="@string/nav_disclaimer" />
        </menu>
    </item>

</menu>
